--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-touch-events/1.0.5/jquery.mobile-events.js"></script>
 
-	<script src="js/data.js?3" type="text/javascript"></script>
+	<script src="js/data.js?2018" type="text/javascript"></script>
 	
-	<script src="js/script.js?2" type="text/javascript"></script>
+	<script src="js/script.js?2018" type="text/javascript"></script>
 
-	<link href="css/style.css?3" rel="stylesheet" type="text/css">
+	<link href="css/style.css?2018" rel="stylesheet" type="text/css">
 	
 </head>
 
@@ -34,6 +34,7 @@
 	<div id="container">
 		<div>
 			<div id="header"></div>
+			<button class="editionButton" id="bingo2018">Byt till 2018 års bricka</button>
 			<button class="editionButton" id="bingo2017">Byt till 2017 års bricka</button>
 			<button class="editionButton" id="bingo2016">Byt till 2016 års bricka</button>
 		</div>
